--- a/views/squartPage/squart.html
+++ b/views/squartPage/squart.html
@@ -58,6 +58,8 @@
     let status = "stand" ;
     // 갯수 count
     let count = 0;
+    // 잘못된 경우 count
+    let wrong_count = 0;
 
     async function predict() {
         // Prediction #1: run input through posenet
@@ -71,10 +73,11 @@
             if (status == "squart")
             {
                 count++;
+                console.log(`올바른 스쿼트 : ${count}`)
             }
             status = "stand";
         }
-        else if (prediction[1].probability.toFixed(2) == 1.00) // 스쿼트 자세
+        else if (prediction[1].probability.toFixed(2) > 1.00) // 스쿼트 자세
         {
             status = "squart";
         }
@@ -82,11 +85,12 @@
         {
             if (status == "squart" || status == "stand") // 굽은 자세로 잘못 수행하면,
             {
-                console.log("잘못된 경우 입니다.")
+                wrong_count++;
+                console.log(`잘못된 자세 : ${wrong_count}`)
             }
             status = "bent";
         }
-        
+
         for (let i = 0; i < maxPredictions; i++) {
             const classPrediction =
                 prediction[i].className + ": " + prediction[i].probability.toFixed(2);
