Implement move page function and get-js-file-API

--- a/views/mainPage/main.html
+++ b/views/mainPage/main.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     Main Page
+    <div>
+        <input type="button" value = "squart start" id = "moveSquart" onclick="moveSquartPage()"/>
+    </div>
+
+    <script type="text/javascript" src="./main.js"></script>
 </body>
 </html>
