Implement login page with MongoDB

--- a/views/mainPage/main.html
+++ b/views/mainPage/main.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Page</title>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
     Main Page
@@ -13,5 +15,12 @@
     </div>
 
     <script type="text/javascript" src="./main.js"></script>
+    <div>
+        <input id = "name" type = "text" placeholder="이름">
+        <input id = "password" type = "text" placeholder="비밀번호">
+        <button type="submit" id = "button">
+            로그인
+        </button>
+    </div>
 </body>
 </html>
