--- a/views/mainPage/main.html
+++ b/views/mainPage/main.html
@@ -22,5 +22,12 @@
             로그인
         </button>
     </div>
+    <div>
+        <input id = "register_name" type = "text" placeholder="이름">
+        <input id = "register_password" type = "text" placeholder = "비밀번호">
+        <button type = "submit" id = "register_button">
+            회원가입
+        </button>
+    </div>
 </body>
 </html>
