--- a/views/squartPage/squart.html
+++ b/views/squartPage/squart.html
@@ -7,9 +7,14 @@
     <title>Squart Page</title>
 </head>
 <body>
-    <div>Teachable Machine Pose Model - Squart</div>
+    <div>온라인 헬스 케어 서비스 (스쿼트)</div>
+<div>
+    <script src = "./squart.js"></script>
+    <sapn id = "user_count">0</sapn>
+</div>
 <button type="button" onclick="init()">Start</button>
 <div><canvas id="canvas"></canvas></div>
+
 <div id="label-container"></div>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js"></script>
