--- a/views/squatPage/squat.html
+++ b/views/squatPage/squat.html
@@ -7,9 +7,9 @@
       <link rel="stylesheet" href="style.css">
       <title>Squat Page</title>
   </head>
-  <body>
-    <h1><div>Teachable Machine Pose Model - Squat</div></h1>
-    <button type="button" onclick="init()">Start</button>
+  <body bgcolor= "#353535">
+    <div class="Title">Squat Page</div>
+    <center><button class="w-btn w-btn-indigo" type="button" onclick="init()">START</button></center>
     <div><canvas id="canvas"></canvas></div>
     <div id="label-container"></div>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
@@ -31,7 +31,7 @@
             model = await tmPose.load(modelURL, metadataURL);
             maxPredictions = model.getTotalClasses();
             // Convenience function to setup a webcam
-            const size = 600;
+            const size = 500;
             const flip = true; // whether to flip the webcam
             webcam = new tmPose.Webcam(size, size, flip); // width, height, flip
             await webcam.setup(); // request access to the webcam
