--- a/views/squatPage/squat.css
+++ b/views/squatPage/squat.css
@@ -2,6 +2,7 @@
 
 button {
   margin: 10px;
+  margin-bottom: 40px;
 }
 
 .w-btn {
@@ -47,6 +48,19 @@ button {
   font-size : 60px;
   font-family: fantasy;
   color : aliceblue;
-  margin: 20px;
+  margin-top: 60px;
+  margin-bottom: 20px;
   text-align: center;
+}
+
+.label-container {
+  visibility: hidden;
+}
+
+.hidden {
+  visibility: hidden;
+}
+
+.visible {
+  visibility: visible;
 }
