--- a/views/squatPage/squat.css
+++ b/views/squatPage/squat.css
@@ -2,7 +2,7 @@
 
 button {
   margin: 10px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 
 .w-btn {
@@ -45,12 +45,21 @@ button {
 }
 
 .Title {
-  font-size : 60px;
+  font-size : 100px;
   font-family: fantasy;
   color : aliceblue;
-  margin-top: 60px;
+  margin-top: 15%;
+  text-align: center;
+}
+
+.click_title {
+  font-size : 40px;
+  font-family: fantasy;
+  color : aliceblue;
+  margin-top: 40px;
   margin-bottom: 20px;
   text-align: center;
+  transition: 500ms;
 }
 
 .label-container {
@@ -63,4 +72,15 @@ button {
 
 .visible {
   visibility: visible;
+}
+
+.circle {
+  margin: 20px;
+  width: 100px;
+  height: 100px;
+  background-color: aliceblue;
+  color: #2e2f30;
+  text-align: center;
+  border-radius: 50%;
+  line-height: 100px;
 }
