--- a/views/squatPage/squat.html
+++ b/views/squatPage/squat.html
@@ -8,22 +8,25 @@
       <title>Squat Page</title>
   </head>
   <body bgcolor= "#353535">
-    <div class="Title">Squat Page</div>
-    <center>
-        <button class="w-btn w-btn-indigo" type="button" onclick="init()">WEBCAM START</button>
-        <div>
-            <canvas id="canvas"></canvas>
-            <iframe
-                id="youtube"
-                class="hidden"
-                width="560" height="315"
-                src="https://www.youtube.com/embed/9WhpAVOSyl8?start=22"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-            </iframe>
-        </div>
-    </center>
+    <div id="title" class="Title">
+        Squat Page
+        <center>
+            <button class="w-btn w-btn-indigo" type="button" onclick="init()">WEBCAM START</button>
+            <div>
+                <canvas id="canvas"></canvas>
+                <iframe
+                    id="youtube"
+                    class="hidden"
+                    width="560" height="400"
+                    src="https://www.youtube.com/embed/9WhpAVOSyl8?start=22"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </iframe>
+            </div>
+            <div id="counter" class="circle">0</div>
+        </center>
+    </div>
     <div id="label-container" class="label-container"></div>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js"></script>
