Add a counting function

--- a/views/squatPage/squat.html
+++ b/views/squatPage/squat.html
@@ -24,7 +24,7 @@
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                 </iframe>
             </div>
-            <div id="counter" class="circle">0</div>
+            <div id="counter" class="circle"></div>
         </center>
     </div>
     <div id="label-container" class="label-container"></div>
