--- a/views/mainPage/main.html
+++ b/views/mainPage/main.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Page</title>
-
+    <link rel="stylesheet" href="main.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
-<body>
-    Main Page
-    <div>
-        <input type="button" value = "squart start" id = "moveSquart" onclick="moveSquartPage()"/>
+<body bgcolor= "#353535">
+    <div class="title">
+        🏋️‍♂️방구석 헬스 트레이너🏋️‍♀️
     </div>
+    <center>
+        <div>
+            <input class="w-btn w-btn-indigo" type="button" value = "Squat Start" id = "moveSquart" onclick="moveSquartPage()"/>
+        </div>
 
-    <script type="text/javascript" src="./main.js"></script>
-    <div>
-        <input id = "name" type = "text" placeholder="이름">
-        <input id = "password" type = "text" placeholder="비밀번호">
-        <button type="submit" id = "button">
-            로그인
-        </button>
-    </div>
-    <div>
-        <input id = "register_name" type = "text" placeholder="이름">
-        <input id = "register_password" type = "text" placeholder = "비밀번호">
-        <button type = "submit" id = "register_button">
-            회원가입
-        </button>
-    </div>
+        <script type="text/javascript" src="./main.js"></script>
+        <div class="flex-container">
+            <div class="flex-item">
+                <div><input class="input" id = "name" value="👨‍🦲" type = "text"></div>
+                <div><input class="input" id = "password" value="🔑" type = "text"></div>
+                <div><button class="login_sign" type="submit" id = "button">로그인</button></div>
+            </div>
+            <div class="flex-item">
+                <div><input class="input" id = "register_name" value="👨‍🦲" type = "text"></div>
+                <div><input class="input" id = "register_password" value="🔑" type = "text"></div>
+                <div><button class="login_sign" type="submit" id = "register_button">회원가입</button></div>
+            </div>
+        </div>
+    </center>
 </body>
 </html>
