--- a/views/squatPage/squat.html
+++ b/views/squatPage/squat.html
@@ -6,12 +6,15 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="squat.css">
       <title>Squat Page</title>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
   <body bgcolor= "#353535">
     <div id="title" class="Title">
         Squat Page
+        
         <center>
             <button class="w-btn w-btn-indigo" type="button" onclick="init()">WEBCAM START</button>
+            <button id = "savecount" class="w-btn w-btn-indigo" type="button" onclick="">스쿼트 횟수 저장</button>
             <div>
                 <canvas id="canvas"></canvas>
                 <iframe
@@ -28,6 +31,7 @@
         </center>
     </div>
     <div id="label-container" class="label-container"></div>
+    
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js"></script>
     <script src="./squat.js"></script>
