--- a/views/squatPage/squat.css
+++ b/views/squatPage/squat.css
@@ -1,4 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap');
 @import url("https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap");
+@font-face {
+    font-family: 'BMJUA';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/BMJUA.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'BMEULJIRO';
+    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_twelve@1.0/BMEULJIRO.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 
 button {
   margin: 10px;
@@ -11,7 +25,7 @@ button {
   display: inline-block;
   padding: 15px 30px;
   border-radius: 15px;
-  font-family: "paybooc-Light", sans-serif;
+  font-family: "BMJUA", sans-serif;
   box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
   text-decoration: none;
   font-weight: 600;
@@ -22,7 +36,7 @@ button {
   position: relative;
   padding: 15px 30px;
   border-radius: 15px;
-  font-family: "paybooc-Light", sans-serif;
+  font-family: "BMJUA", sans-serif;
   box-shadow: 0 15px 35px rgba(0, 0, 0, 0.2);
   text-decoration: none;
   font-weight: 600;
@@ -46,7 +60,7 @@ button {
 
 .Title {
   font-size : 100px;
-  font-family: fantasy;
+  font-family: BMEULJIRO;
   color : aliceblue;
   margin-top: 15%;
   text-align: center;
@@ -54,7 +68,7 @@ button {
 
 .click_title {
   font-size : 40px;
-  font-family: fantasy;
+  font-family: BMEULJIRO;
   color : aliceblue;
   margin-top: 40px;
   margin-bottom: 20px;
